# openclaw-workout-logger

./: .env.example  .gitignore  README.md  SKILL.md  index.js  package.json  pyproject.toml  workout
examples/: test-cases.md
scripts/: verify-db.js
src/: formatter.js  handler.js  monitor.js  parser.js
tests/: __init__.py  test_parser.py
workout_logger/: __init__.py  cli.py  exercises.py  formatter.py  models.py  parser.py  writer.py
